--- a/BotDiscord/appsettings.json
+++ b/BotDiscord/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Settings": {
-    "DiscordBotToken": "MTA5MTkxNzQ3MTEwOTM2MTY2NA.GRwsrb.EkwmQP3B1vwwtXWKoUgCQlSaEJfuBpm900z8IM"
+    "DiscordBotToken": "[secretDiscordBotToken]"
   }
 }
 
